add session handling

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,12 @@
 				<tr><td></td><td><input type="submit" value="Upload" /></td></tr>
 			</table>
 		</form>
+		
+		<div>
+		<form action="/api/cards/destroy" method="post">
+			<input type="submit" value="Destroy Session" />
+		</form>
+	</div>
 	
 
     </div>
